# automated-radio-imaging-paper

./: CMakeLists.txt  MAKE_PAPER.sh  README.md  clean_for_arxiv.sh
cmake/: FindLatexMk.cmake
manuscript/: automated_radio_reduction.bib  automated_radio_reduction.bib.bak  automated_radio_reduction.tex  automated_radio_reduction.tex.backup  elsarticle-harv-max8.bst
